update documentation and fix environment variables

--- a/runtime/src/main/resources/reference.conf
+++ b/runtime/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ rest-gateway {
   service-port = 8080
   service-port = ${?GRPC_SERVICE_PORT}
   gateway-port = 7070
-  gateway-port = ${?REST-GATEWAY-PORT}
+  gateway-port = ${?REST_GATEWAY_PORT}
   use-plain-text = "true"
-  use-plain-text = ${?GRPC-USE-PLAIN-TEXT}
+  use-plain-text = ${?GRPC_USE_PLAIN_TEXT}
 }
