--- a/runtime-pekko/src/main/resources/reference.conf
+++ b/runtime-pekko/src/main/resources/reference.conf
@@ -3,4 +3,6 @@ rest-gateway {
   host = ${?REST_GATEWAY_HOST}
   port = 7070
   port = ${?REST_GATEWAY_PORT}
+  hard-termination-deadline = 10.seconds
+  hard-termination-deadline = ${?REST_GATEWAY_HARD_TERMINATION_DEADLINE}
 }
